--- a/mymission/index.html
+++ b/mymission/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Insert title here</title>
 <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=https://blog.miyam.net"></meta>
 </head>
 <body>
 자바 놀이터
