--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Insert title here</title>
+<title>JAVA PLAYGROUND</title>
 <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=https://caruisa.github.io/spring/mymission/"></meta>
 </head>
 <body>
 자바 놀이터
