--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>JAVA PLAYGROUND</title>
 <meta charset="UTF-8" />
+<meta http-equiv="refresh" content="0; url=https://github.com/caruisa/spring/mymission"></meta>
 </head>
 <body>
 자바 놀이터
