--- a/mymission/index.html
+++ b/mymission/index.html
@@ -6,5 +6,12 @@
 </head>
 <body>
 자바 놀이터 ~~
+<ul>
+    <li>
+        <ul>
+            <li><a href="/mymission">낭만 놀이터</a></li>
+        </ul>
+    </li>
+</ul>
 </body>
 </html>
