--- a/mymission/index.html
+++ b/mymission/index.html
@@ -9,7 +9,7 @@
 <ul>
     <li>
         <ul>
-            <li><a href="/home">낭만 놀이터</a></li>
+            <li><a href="/mymission">낭만 놀이터</a></li>
         </ul>
     </li>
 </ul>
